--- a/submission project/search/img_search.html
+++ b/submission project/search/img_search.html
@@ -120,7 +120,7 @@
   <body>
     <div class="link_container">
       <a href="./index.html">Search</a>
-      <a href="./advncd_search.html">Advanced Search</a>
+      <a href="./advanced_search.html">Advanced Search</a>
     </div>
     <div class="main_container">
       <div class="title_container">
