--- a/submission project/search/index.html
+++ b/submission project/search/index.html
@@ -112,7 +112,7 @@
   <body>
     <div class="link_container">
       <a href="./img_search.html">Image Search</a>
-      <a href="./advncd_search.html">Advanced Search</a>
+      <a href="./advanced_search.html">Advanced Search</a>
     </div>
     <div class="main_container">
       <h1>Google</h1>
