--- a/submission project/search/advanced_search.html
+++ b/submission project/search/advanced_search.html
@@ -36,9 +36,6 @@
       .section1 {
         width: 600px;
       }
-      .section2 {
-        700px;
-      }
       .form-container {
         min-height: 100px;
         display: flex;
@@ -82,10 +79,24 @@
       .section-title {
         font-size: 1rem;
       }
+      .link_container {
+        position: absolute;
+        top: 10px;
+        right: 20px;
+
+        display: flex;
+        gap: 15px;
+
+        font-size: .8rem;
+      }
     </style>
   </head>
   <body>
     <div class="google-text">Google</div>
+    <div class="link_container">
+      <a href="./index.html">Search</a>
+      <a href="./img_search.html">Image Search</a>
+    </div>
     <h1>Advanced Search</h1>
     <hr>
     <div class="form-wrapper">
