--- a/submission project/search/advanced_search.html
+++ b/submission project/search/advanced_search.html
@@ -75,6 +75,14 @@
         height: 30px;
         width: 42.75%;
         align-self: flex-end;
+        background-color: rgb(110, 110, 248);
+        color: white;
+        outline: none;
+        border: none;
+        border-radius: 3px;
+      }
+      .submit-button:hover {
+        cursor: pointer;
       }
       .section-title {
         font-size: 1rem;
